--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "bot.js",
   "author": "Joao Caldeira",
   "dependencies": {
+    "discord-api-types": "^0.37.19",
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
-    "discord.js": "^13.9.0",
+    "discord.js": "^14.6.0",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
     "sanitize": "^2.1.0",
